--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -32,4 +32,5 @@ body {
   font-weight: 300;
   line-height: 1.6;
   position: relative;
+  padding-bottom: 2rem;
 }
