--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -2,6 +2,7 @@
   &__items {    
     height: 100%;
     width: 100%;
+
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -10,11 +11,20 @@
       justify-content: center;
     }
 
+    @include respond(small-phone) {
+      justify-content: space-around;
+    }
+
     & li {
       color: white;
       list-style: none;
       font-size: 2rem;
       padding: 0 2rem;
+
+      @include respond(phone) {
+        font-size: 1.5rem;
+        padding: 0 1rem;
+      }
 
       a {
         text-decoration: none;
